--- a/PROJET_PPE2.1_KARATE2/PROJET_PPE2.1_KARATE2/PROJET_PPE2.1_KARATE2.csproj
+++ b/PROJET_PPE2.1_KARATE2/PROJET_PPE2.1_KARATE2/PROJET_PPE2.1_KARATE2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{012BADB1-3BDF-44D3-A13C-53FC50FC337C}</ProjectGuid>
+    <ProjectGuid>{68115E50-FEAA-411F-A38B-E52868FAD567}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>PROJET_PPE2._1_KARATE</RootNamespace>
-    <AssemblyName>PROJET_PPE2.1_KARATE</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>PROJET_PPE2._1_KARATE2</RootNamespace>
+    <AssemblyName>PROJET_PPE2.1_KARATE2</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -54,33 +54,25 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="Modif.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="Modif.Designer.cs">
+      <DependentUpon>Modif.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Suppr.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Suppr.Designer.cs">
       <DependentUpon>Suppr.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_GestionEntraineur_AJ.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_GestionEntraineur_AJ.Designer.cs">
-      <DependentUpon>Frm_GestionEntraineur_AJ.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Suppr.resx">
-      <DependentUpon>Suppr.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_GestionEntraineur_AJ.resx">
-      <DependentUpon>Frm_GestionEntraineur_AJ.cs</DependentUpon>
+    <EmbeddedResource Include="Modif.resx">
+      <DependentUpon>Modif.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -91,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Suppr.resx">
+      <DependentUpon>Suppr.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
